# openclaw-hello-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: KANBAN_PLAN.md
src/openclaw_hello_python/: cli.py  webapp.py
src/openclaw_hello_python/kanban/: __init__.py  db.py  models.py  service.py
src/openclaw_hello_python/templates/: index.html
src/openclaw_hello_python/templates/partials/: board.html  card.html  column.html
tests/: test_cli.py  test_kanban_service.py
