[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-hello-python"
version = "0.1.0"
description = "Hello world Python project (3.11) for OpenClaw demos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "sjramblings"}]
keywords = ["openclaw", "demo", "hello-world"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
openclaw-hello-python = "openclaw_hello_python.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
